--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="followers">
                     <div class="box">
-                        <h1>1,256</h1>
+                        <h1 id="count">1256</h1>
                         <h2>followers</h2>
                     </div>
                     </div>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="follow-button">
-                    <div class="btn"><h1>Follow</h1></div>
+                    <div class="btn followbtn"><h1>Follow</h1></div>
                 </div>
                 <div class="bio">
                     <h3>Cole Hansen</h3>
